# flow-memory

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
docs/: index.md  mcp-server.md  migration-from-eduflow.md  quickstart.md
scripts/: check_imports.py
src/flow_memory/: __init__.py  admission.py  agents_md_gen.py  audit.py  candidate_gen.py  candidates.py  capsules.py  cli.py  consolidate.py  constraints.py  daily_summary.py  dashboard.py  decay.py  derivation.py  dual_query.py  embeddings.py  event_bridge.py  event_hooks.py  expiration.py  inject.py  items.py  jit_recall.py  links.py  mcp_server.py  packet.py  reflect.py  scope_aliases.py  search.py  sensitive.py  skill_evolution.py  storage_budget.py  user_profile.py  vector_store.py
src/flow_memory/i18n/: __init__.py  templates.py
src/flow_memory/memory/: cli.py  usage_stats.py
src/flow_memory/policy/: __init__.py  promotion.py  taxonomy.py
src/flow_memory/storage/: __init__.py  paths.py  sql.py  vector.py
tests/: conftest.py  test_candidates.py  test_entrypoints.py  test_packet.py  test_policy.py  test_storage.py
